--- a/app/src/main/res/layout/activity_lung_doctors.xml
+++ b/app/src/main/res/layout/activity_lung_doctors.xml
@@ -80,7 +80,7 @@
                 android:layout_toEndOf="@+id/lung_doctor1"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Nermin Diab"
+                android:text="Dr. Ahmed Ezzat"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -94,8 +94,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/lung_doctor1"
-                android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+                android:text="Consultant of internal chest diseases and allergies - Ain Shams University ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction" />
@@ -130,7 +129,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Omnia Shaheen"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -146,7 +145,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/lung_doctor2"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="Instructor and Consultant of Chest, Respiratory and Allergy Diseases ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction2" />
