--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,10 @@
     <color name="color3">#EEF6FC</color>
     <color name="color4">#FF7364</color>
     <color name="color5">#1D3557</color>
+    <color name="color6">#103870</color>
+    <color name="color7">#073b85</color>
+
+
     <color name="transpatent">#cccccc</color>
     <color name="colorActive">#d4d4d4</color>
     <color name="gray">#908F8F</color>
