--- a/app/src/main/res/layout/activity_lung_doc2.xml
+++ b/app/src/main/res/layout/activity_lung_doc2.xml
@@ -45,9 +45,8 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-185dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of Nephrology, Diabetes,
-         Internal Medicine, Immunology and Thyroid Diseases
-         (Nephrologist specialized in adult diabetes and endocrinology, general internal medicine and adult nephrology)
+        android:text="
+Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Chest and Respiratory Diseases Specialized in Autoimmune Diseases, Adult Allergy and Immunology
 "
         android:textColor="@color/gray"
         android:textSize="16sp"
