--- a/app/src/main/res/layout/activity_skin_upload.xml
+++ b/app/src/main/res/layout/activity_skin_upload.xml
@@ -51,7 +51,7 @@
         android:layout_marginStart="33dp"
         android:layout_marginEnd="117dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Please take a picture of yours eyes"
+        android:text="Please upload a picture of the skin"
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="72dp"
+        android:layout_marginEnd="80dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
@@ -91,10 +91,11 @@
         android:id="@+id/camera"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/choose"
         app:layout_constraintEnd_toStartOf="@+id/choose"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/choose"
         app:srcCompat="@drawable/ic_camera" />
