--- a/app/src/main/res/layout/activity_lung_doc2.xml
+++ b/app/src/main/res/layout/activity_lung_doc2.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Maged Habib "
+        android:text="Dr. Fatima Zahra"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -90,7 +90,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="300 EGP"
+        android:text="400 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -106,8 +106,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Street 105, Cairo, Maadi
-"
+        android:text="Dar Al Fouad Hospital (Nasr City)"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -119,7 +118,7 @@ Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Ches
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="02 25262688"
+        android:text="01002222545"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
