--- a/app/src/main/res/layout/activity_lung_doctors.xml
+++ b/app/src/main/res/layout/activity_lung_doctors.xml
@@ -184,7 +184,7 @@
                 android:layout_toEndOf="@+id/lung_doctor3"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Nermin Diab"
+                android:text="Dr.Emad Eddin"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -198,8 +198,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/lung_doctor3"
-                android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+                android:text="Professor of Pulmonary Medicine and Allergy, Faculty of Medicine, Alexandria University ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction3" />
@@ -234,7 +233,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Salma Abdelhady"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -250,7 +249,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/lung_doctor4"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="Consultant of Pediatric Chest and Respiratory Diseases, Faculty Member, Faculty of ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction4" />
@@ -289,7 +288,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_toEndOf="@+id/lung_doctor5"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Nermin Diab"
+                android:text="Dr.Haitham Sami"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -303,8 +302,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/lung_doctor5"
-                android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult ..."
+                android:text="Chest Diseases Consultant. Chest and Respiratory ..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction5" />
@@ -339,7 +337,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Maged Habib "
+                android:text="Dr. Amani Khalil"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -355,7 +353,7 @@ Nephrologist specialized in Adult ..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/lung_doctor6"
-                android:text="Consultant of Nephrology, Diabetes, Internal Medicine, Immunology ..."
+                android:text="Master of Chest Diseases and Allergy (Ain Shams University)..."
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction6" />
