--- a/app/src/main/res/layout/activity_lung_doc1.xml
+++ b/app/src/main/res/layout/activity_lung_doc1.xml
@@ -42,8 +42,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="-200dp"
         android:layout_marginTop="-250dp"
+        android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView5"
         android:text="Consultant of internal chest diseases and allergies - Ain Shams University.
 Chest and Respiratory Doctor specialized in Respiratory Allergy, Pediatric Chest and Respiratory, Adult Chest and Respiratory and General Internal Medicine"
