--- a/app/src/main/res/layout/activity_lung_doc3.xml
+++ b/app/src/main/res/layout/activity_lung_doc3.xml
@@ -31,7 +31,7 @@
         android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Nermin Diab"
+        android:text="Dr.. Emad Eddin"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -42,11 +42,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="-200dp"
         android:layout_marginTop="-250dp"
+        android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView5"
-        android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephrology."
+        android:text="Professor of Pulmonary Medicine and Allergy, Faculty of Medicine, Alexandria University
+Consultant bronchoscopy and thoracic intensive care."
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction3" />
@@ -89,7 +91,7 @@ Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephro
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="150 EGP"
+        android:text="250 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -105,9 +107,8 @@ Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephro
         android:layout_marginTop="19dp"
         android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="New Cairo (Settlement) Edrak Clinics,
-Street 15, District One - Fifth Settlement, Medical Park 1
- - in front of the Courts Complex - next to 7 Stars Mall"
+        android:text="8 College of Medicine Street, Doctors Tower, Raml Station
+Raml Station - Alexandria"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -119,7 +120,7 @@ Street 15, District One - Fifth Settlement, Medical Park 1
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01201111344"
+        android:text="4855593"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
