--- a/app/src/main/res/layout/activity_lung_doc4.xml
+++ b/app/src/main/res/layout/activity_lung_doc4.xml
@@ -25,11 +25,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Maged Habib "
+        android:text="Dr.Salma Abdelhady"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -41,13 +41,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="26dp"
-        android:layout_marginEnd="-185dp"
+        android:layout_marginEnd="-160dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of Nephrology, Diabetes,
-         Internal Medicine, Immunology and Thyroid Diseases
-         (Nephrologist specialized in adult diabetes and endocrinology, general internal medicine and adult nephrology)
+        android:text="Consultant of Pediatric Chest and Respiratory Diseases, Faculty Member, Faculty of Medicine, Ain Shams University, and Ph.D. in Pediatrics and Neonatology
 "
         android:textColor="@color/gray"
         android:textSize="16sp"
@@ -91,7 +89,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="300 EGP"
+        android:text="250 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -107,7 +105,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Street 105, Cairo, Maadi
+        android:text="Nasr City, the ground floor of Building 20, Tayaran Street (near Rabaa Mosque)
 "
         android:textColor="@color/black"
         android:textStyle="normal" />
@@ -120,7 +118,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="02 25262688"
+        android:text="01032310244"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
