--- a/app/src/main/res/layout/activity_lung_doc6.xml
+++ b/app/src/main/res/layout/activity_lung_doc6.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Maged Habib "
+        android:text="Dr. Amani Khalil"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,9 +45,8 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-185dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant of Nephrology, Diabetes,
-         Internal Medicine, Immunology and Thyroid Diseases
-         (Nephrologist specialized in adult diabetes and endocrinology, general internal medicine and adult nephrology)
+        android:text="Master of Chest Diseases and Allergy (Ain Shams University)
+Chest and Allergy Specialist
 "
         android:textColor="@color/gray"
         android:textSize="16sp"
@@ -91,7 +90,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="300 EGP"
+        android:text="140 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -107,7 +106,8 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Street 105, Cairo, Maadi
+        android:text="6056 Al-Miraj City - Zahraa El-Maadi, next to Aba El-Dahab Ceramic, Cairo, Cairo Governorate, Egypt 6056
+
 "
         android:textColor="@color/black"
         android:textStyle="normal" />
@@ -120,7 +120,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="02 25262688"
+        android:text="01155175888"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
