--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -67,7 +67,7 @@
         android:drawableTint="#ACACAC"
         android:ems="10"
         android:hint="@string/new_pass"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/black"
@@ -89,7 +89,7 @@
         android:drawableTint="#ACACAC"
         android:ems="10"
         android:hint="@string/confirm_pass"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/black"
