--- a/app/src/main/res/layout/activity_hospital.xml
+++ b/app/src/main/res/layout/activity_hospital.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentEnd="true"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Best hospitals "
+        android:text="@string/best_hospitals"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,51 +45,52 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView30">
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_gravity="center">
-    <ImageView
-        android:layout_width="140dp"
-        android:layout_height="70dp"
-        android:src="@drawable/hos1"/>
-
-    <TextView
-        android:id="@+id/nam1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
-        android:foregroundGravity="center"
-        android:gravity="center"
-        android:paddingTop="2dp"
-        android:text="Sheikh Zayed Specialized Hospital"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/loc1"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Central Axis, Sheikh Zayed"
-            android:textColor="@color/gray"
-            android:textSize="12dp"
-            />
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="70dp"
+                android:src="@drawable/hos1"/>
 
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:srcCompat="@drawable/star2" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4.5"
-        android:textColor="@color/black"
-        android:textSize="14dp"/>
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/nam1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:paddingTop="2dp"
+                android:text="Sheikh Zayed Specialized Hospital"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/loc1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Central Axis, Sheikh Zayed"
+                android:textColor="@color/gray"
+                android:textSize="12dp"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:srcCompat="@drawable/star2" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4.5"
+                android:textColor="@color/black"
+                android:textSize="14dp"/>
+
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
@@ -116,6 +117,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="70dp"
+                android:src="@drawable/hos2"/>
 
             <TextView
                 android:id="@+id/nam2"
@@ -124,7 +129,7 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
+                android:paddingTop="2dp"
                 android:text="Ghoneim Center at Mansoura University"
                 android:textColor="@color/black"
                 android:textSize="16dp"
@@ -177,6 +182,11 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="65dp"
+                android:src="@drawable/hos3"/>
+
 
             <TextView
                 android:id="@+id/nam3"
@@ -185,7 +195,7 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
+                android:paddingTop="2dp"
                 android:text="Arab Contractors Medical Centre"
                 android:textColor="@color/black"
                 android:textSize="16dp"
@@ -238,6 +248,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="80dp"
+                android:src="@drawable/hos4"/>
 
             <TextView
                 android:id="@+id/nam4"
@@ -246,7 +260,7 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
+                android:paddingTop="2dp"
                 android:text="Elite Medical Hospital"
                 android:textColor="@color/black"
                 android:textSize="16dp"
@@ -299,6 +313,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="70dp"
+                android:src="@drawable/hos5"/>
 
             <TextView
                 android:id="@+id/nam5"
@@ -307,7 +325,7 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
+                android:paddingTop="2dp"
                 android:text="As-Salam International Hospital Maadi Branch"
                 android:textColor="@color/black"
                 android:textSize="16dp"
@@ -360,6 +378,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="80dp"
+                android:src="@drawable/hos6"/>
 
             <TextView
                 android:id="@+id/nam6"
@@ -368,7 +390,7 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
+                android:paddingTop="2dp"
                 android:text="Nile Hospital"
                 android:textColor="@color/black"
                 android:textSize="16dp"
