--- a/app/src/main/res/layout/activity_lung_hospitals.xml
+++ b/app/src/main/res/layout/activity_lung_hospitals.xml
@@ -53,8 +53,8 @@
             android:layout_gravity="center">
             <ImageView
                 android:layout_width="140dp"
-                android:layout_height="70dp"
-                android:src="@drawable/hos1"/>
+                android:layout_height="65dp"
+                android:src="@drawable/hosp1"/>
 
 
             <TextView
@@ -65,7 +65,7 @@
                 android:foregroundGravity="center"
                 android:gravity="center"
                 android:paddingTop="2dp"
-                android:text="Sheikh Zayed Specialized Hospital"
+                android:text="Sadr El Fayoum Hospital"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -74,7 +74,8 @@
                 android:id="@+id/loc1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Central Axis, Sheikh Zayed"
+                android:text="Qesm Al Fayoum, Faiyum, Faiyum Governorate"
+                android:gravity="center"
                 android:textColor="@color/gray"
                 android:textSize="12dp"
                 />
@@ -86,7 +87,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4.5"
+                android:text="4.0"
                 android:textColor="@color/black"
                 android:textSize="14dp"/>
 
@@ -117,6 +118,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="65dp"
+                android:src="@drawable/hosp4"/>
 
             <TextView
                 android:id="@+id/nam2"
@@ -125,8 +130,8 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
-                android:text="Ghoneim Center at Mansoura University"
+                android:paddingTop="2dp"
+                android:text="Alexandria Chest Center"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -135,7 +140,7 @@
                 android:id="@+id/loc2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mansoura University"
+                android:text="712 El-Horeya Rd, San Stefano, El Raml 1, Alexandria"
                 android:textColor="@color/gray"
                 android:gravity="center"
                 android:textSize="12dp"
@@ -178,6 +183,11 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="140dp"
+                android:layout_height="70dp"
+                android:src="@drawable/hosp3"/>
+
 
             <TextView
                 android:id="@+id/nam3"
@@ -186,8 +196,8 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
-                android:text="Arab Contractors Medical Centre"
+                android:paddingTop="2dp"
+                android:text="Dar Al Fouad Hospital"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -196,7 +206,7 @@
                 android:id="@+id/loc3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="El-Nasr Rd, Al Abageyah, Nasr City, Cairo Governorate"
+                android:text=" First 6th of October, Giza Governorate"
                 android:textColor="@color/gray"
                 android:gravity="center"
                 android:textSize="12dp"
@@ -209,7 +219,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4.1"
+                android:text="3.0"
                 android:textColor="@color/black"
                 android:textSize="14dp"/>
 
@@ -239,6 +249,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+                <ImageView
+                android:layout_width="140dp"
+                android:layout_height="65dp"
+                android:src="@drawable/hosp2"/>
 
             <TextView
                 android:id="@+id/nam4"
@@ -247,8 +261,8 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
-                android:text="Elite Medical Hospital"
+                android:paddingTop="2dp"
+                android:text="Abassya Chest Diseases Hospital"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -257,7 +271,7 @@
                 android:id="@+id/loc4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sidi Beshr Bahri, Montaza 2, Alexandria Governorate"
+                android:text="ABBASSEYA، Nasr City, Cairo Governorate"
                 android:textColor="@color/gray"
                 android:gravity="center"
                 android:textSize="12dp"
@@ -270,7 +284,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3.8"
+                android:text="3.5"
                 android:textColor="@color/black"
                 android:textSize="14dp"/>
 
@@ -300,6 +314,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="80dp"
+                android:src="@drawable/hosp6"/>
 
             <TextView
                 android:id="@+id/nam5"
@@ -308,8 +326,8 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
-                android:text="As-Salam International Hospital Maadi Branch"
+                android:paddingTop="2dp"
+                android:text="Sadr El Giza Hospital"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -318,7 +336,7 @@
                 android:id="@+id/loc5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cairo - Al Wosta, Athar an Nabi, Old Cairo, Cairo Governorate"
+                android:text="Teraet El Zomor St., El Haram"
                 android:textColor="@color/gray"
                 android:gravity="center"
                 android:textSize="12dp"
@@ -331,7 +349,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3.3"
+                android:text="2.8"
                 android:textColor="@color/black"
                 android:textSize="14dp"/>
 
@@ -361,6 +379,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:layout_gravity="center">
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="80dp"
+                android:src="@drawable/hosp5"/>
 
             <TextView
                 android:id="@+id/nam6"
@@ -369,8 +391,8 @@
                 android:layout_gravity="center|top"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:paddingTop="10dp"
-                android:text="Nile Hospital"
+                android:paddingTop="2dp"
+                android:text="Sadr hospital in Assiut"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -379,7 +401,7 @@
                 android:id="@+id/loc6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="El-Nasr, Hurghada, Red Sea Governorate"
+                android:text="Al Ibrahimeya, Al Walideyah Al Westaneyah, Asyut 2, Assiut "
                 android:textColor="@color/gray"
                 android:gravity="center"
                 android:textSize="12dp"
@@ -392,7 +414,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3.2"
+                android:text="3.7"
                 android:textColor="@color/black"
                 android:textSize="14dp"/>
 
