--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="color5">#1D3557</color>
     <color name="color6">#103870</color>
     <color name="color7">#073b85</color>
+    <color name="color8">#E7F5FE</color>
 
 
     <color name="transpatent">#cccccc</color>
