--- a/app/src/main/res/layout/activity_successful.xml
+++ b/app/src/main/res/layout/activity_successful.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-        android:text="your data is recorded !"
+        android:text="Your lung is healthy"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -53,8 +53,10 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="404dp"
-        android:layout_height="446dp"
+        android:layout_width="390dp"
+        android:layout_height="420dp"
+        android:layout_marginTop="30dp"
+        android:paddingRight="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="424dp"
-        android:text="Successful rays !"
+        android:text="@string/Successful_rays"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
         android:textSize="20sp"
@@ -81,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-        android:text="Thanks for your donation !"
+        android:text="We wish you good health"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
         android:textSize="20sp"
